# video-analysis-ia

./: CMakeLists.txt  README.md  SPECIFICATIONS.md
include/: analyzer.hpp  detector.hpp  exporter.hpp  tracker.hpp  visualizer.hpp
src/: analyzer.cpp  detector.cpp  exporter.cpp  main.cpp  tracker.cpp  visualizer.cpp
